<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="io.kim_kong.jjin_re.features.edit_profile.EditProfileViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tb_edit_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:title="@string/app_name"
                app:titleTextColor="@color/colorWhite"
                app:navigationIcon="@drawable/ic_arr_back_white"/>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.core.widget.NestedScrollView
            android:id="@+id/layout_edit_profile_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_change_profile">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <org.amphiaraus.roundedlayout.RoundedLayout
                    android:id="@+id/layout_profile_change"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:background="@color/Transparent"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:rlRoundBottomLeft="true"
                    app:rlRoundBottomRight="true"
                    app:rlRoundTopLeft="true"
                    app:rlRoundTopRight="true"
                    app:rlRoundedCornerRadius="50dp"
                    app:layout_constraintBottom_toTopOf="@+id/layout_edit_profile_bottom"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <ImageView
                        android:id="@+id/iv_cur_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:editProfileImage="@{viewModel.userModel.userImg}"
                        android:background="@color/Transparent"
                        android:src="@drawable/ic_profile_default" />
                    <TextView
                        android:id="@+id/btn_change_photo"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="24dp"
                        android:layout_gravity="bottom"
                        android:background="#bb000000"
                        android:fontFamily="@font/notosanskr_regular"
                        android:gravity="center"
                        android:includeFontPadding="false"
                        android:text="변경"
                        android:textColor="@color/colorWhite"
                        android:textSize="12sp" />
                </org.amphiaraus.roundedlayout.RoundedLayout>

                <LinearLayout
                    android:id="@+id/layout_edit_profile_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="48dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_profile_change"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="20dp"
                        android:text="@string/str_sign_up_name"
                        android:textColor="@color/colorPrimary"/>
                    <EditText
                        android:id="@+id/et_edit_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.userModel.nickName}"
                        android:background="@drawable/login_edt_gray_bottom_line"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="20dp"
                        android:text="@string/str_sign_up_pw"
                        android:textColor="@color/colorPrimary"/>
                    <EditText
                        android:id="@+id/et_edit_profile_pw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_edt_gray_bottom_line"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="20dp"
                        android:text="@string/str_sign_up_pw_crm"
                        android:textColor="@color/colorPrimary"/>
                    <EditText
                        android:id="@+id/et_edit_profile_pw_crm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_edt_gray_bottom_line"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_marginTop="20dp"
                        android:text="@string/str_sign_up_phone"
                        android:textColor="@color/colorPrimary"/>
                    <EditText
                        android:id="@+id/et_edit_profile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.userModel.phone}"
                        android:background="@drawable/login_edt_gray_bottom_line"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_change_profile"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#eeeeee"
            android:enabled="false"
            android:fontFamily="@font/notosanskr_bold"
            android:foreground="?android:attr/selectableItemBackground"
            android:includeFontPadding="false"
            android:letterSpacing="-0.05"
            android:text="@string/str_sign_up_title"
            android:textColor="@color/colorBlack"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_profile_main" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>