<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.login.LoginActivity">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.jjin_re.features.login.LoginViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary">

                <org.amphiaraus.roundedlayout.RoundedLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    android:background="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1.2:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:rlRoundBottomLeft="true"
                    app:rlRoundBottomRight="true"
                    app:rlRoundTopLeft="false"
                    app:rlRoundTopRight="false"
                    app:rlRoundedCornerRadius="100dp"
                    app:rlRoundingBorderColor="@color/colorPrimary">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/gradient_app_bar" />
                </org.amphiaraus.roundedlayout.RoundedLayout>

                <TextView
                    android:id="@+id/tv_login_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:fontFamily="@font/notosanskr_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.05"
                    android:maxLines="1"
                    android:text="@string/app_title"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_login_sub_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/notosanskr_regular"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.05"
                    android:maxLines="1"
                    android:text="구매들이 쓰느 진짜 리뷰"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


            <LinearLayout
                android:id="@+id/layout_login_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="48dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_login_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/edt_login_selector"
                        android:fontFamily="@font/notosanskr_regular"
                        android:hint="@string/str_login_id"
                        android:includeFontPadding="false"
                        android:inputType="textAutoComplete"
                        android:letterSpacing="-0.05"
                        android:paddingStart="10dp"
                        android:paddingTop="14dp"
                        android:paddingBottom="14dp"
                        android:text="@={viewModel.userID}"
                        android:textColor="#222222"
                        android:textColorHint="#AAAAAA"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/del_edt_id"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="14dp"
                        android:background="@color/Transparent"
                        android:onClick="onClickDeleteButton"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_edt_delete"
                        android:visibility="gone" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <EditText
                        android:id="@+id/et_login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/edt_login_selector"
                        android:fontFamily="@font/notosanskr_regular"
                        android:hint="@string/str_login_pw"
                        android:includeFontPadding="false"
                        android:inputType="textPassword"
                        android:letterSpacing="-0.05"
                        android:paddingStart="10dp"
                        android:paddingTop="14dp"
                        android:paddingBottom="14dp"
                        android:text="@={viewModel.userPW}"
                        android:textColor="#222222"
                        android:textColorHint="#AAAAAA"
                        android:textSize="14sp" />

                    <ImageButton
                        android:id="@+id/del_edt_pw"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="14dp"
                        android:background="@color/Transparent"
                        android:onClick="onClickDeleteButton"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_edt_delete"
                        android:visibility="gone" />

                </RelativeLayout>


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="18dp"
                    android:elevation="10dp"
                    android:enabled="false"
                    android:fontFamily="@font/notosanskr_bold"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:includeFontPadding="false"
                    android:letterSpacing="-0.05"
                    android:onClick="@{() -> viewModel.handleLoginClick()}"
                    android:text="@string/str_login_title"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/login_middle_bar"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/colorPrimaryDark"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                app:layout_constraintTop_toBottomOf="@+id/layout_login_main"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/login_middle_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btn_search_pass">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_login_with_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_login_radius"
                    android:onClick="onLoginGoogleClick"
                    app:layout_constraintEnd_toStartOf="@+id/layout_login_with_kakao"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/iv_login_google"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorWhite"
                        android:src="@drawable/ic_google"
                        android:padding="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_login_google"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/tv_login_google"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="구글로그인"
                        android:textSize="12sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/notosanskr_regular"
                        app:layout_constraintStart_toEndOf="@+id/iv_login_google"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_login_with_kakao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edt_login_radius"
                    android:onClick="onLoginKakaoClick"
                    app:layout_constraintStart_toEndOf="@+id/layout_login_with_google"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/iv_login_kakao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_kakao"
                        android:padding="10dp"
                        android:background="#FAE123"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/tv_login_kakao" />
                    <TextView
                        android:id="@+id/tv_login_kakao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="카카오로그인"
                        android:textSize="12sp"
                        android:fontFamily="@font/notosanskr_regular"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        app:layout_constraintStart_toEndOf="@+id/iv_login_kakao"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <Button
                android:id="@+id/btn_search_pass"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@color/Transparent"
                android:fontFamily="@font/notosanskr_regular"
                android:foreground="?android:attr/selectableItemBackground"
                android:includeFontPadding="false"
                android:letterSpacing="-0.05"
                android:onClick="onClickSignUpButton"
                android:text="@string/str_sign_up_title"
                android:textColor="#888888"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>